force-app/main/default/objects/Lead/fields/LPCR_TypeCreche2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche2__c</fullName>
    <formula>'TO DO'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de crèche 2</label>
    <type>Text</type>
</CustomField>