force-app/main/default/objects/Lead/fields/LPCR_TypeCreche3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche3__c</fullName>
    <formula>&#39;TO DO&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de crèche 3</label>
    <type>Text</type>
</CustomField>