force-app/main/default/objects/Lead/fields/LPCR_TypeCrecheX1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCrecheX1__c</fullName>
    <description>type de crèche sélectionnée dans le formulaire web to lead. champ utilisé dans les règles d&apos;attribution de lead</description>
    <label>Type de crèche 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeCreche</valueSetName>
    </valueSet>
</CustomField>