force-app/main/default/objects/Lead/fields/LPCR_TypeCrecheX2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCrecheX2__c</fullName>
    <description>type de crèche sélectionnée dans le formulaire web to lead</description>
    <label>Type de crèche 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeCreche</valueSetName>
    </valueSet>
</CustomField>