force-app/main/default/objects/Lead/fields/LPCR_TypeDeClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDeClient__c</fullName>
    <label>Type de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeEntreprise</valueSetName>
    </valueSet>
</CustomField>