force-app/main/default/objects/Lead/fields/LPCR_TypeExterieur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeExterieur__c</fullName>
    <label>Type extérieur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSU Sèche</fullName>
            </value>
            <value>
                <fullName>PAJE Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>