force-app/main/default/objects/Lead/fields/LPCR_TypeFonctionCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeFonctionCoDemandeur__c</fullName>
    <label>Type de fonction co-demandeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_Type_de_fonction</valueSetName>
    </valueSet>
</CustomField>