force-app/main/default/objects/Lead/fields/LPCR_TypePrestation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypePrestation__c</fullName>
    <label>Type de prestation demandée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Régulier</fullName>
            </value>
            <value>
                <fullName>Occasionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>