force-app/main/default/objects/Lead/fields/LPCR_TypeProfession__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeProfession__c</fullName>
    <label>Type de profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pole direction générale</fullName>
            </value>
            <value>
                <fullName>Pôle achat, services</fullName>
            </value>
            <value>
                <fullName>Pole Ressources humaines</fullName>
            </value>
            <value>
                <fullName>Pole développement durable, environnement, RSE</fullName>
            </value>
            <value>
                <fullName>Pole Finance administratif, juridique</fullName>
            </value>
            <value>
                <fullName>Pole informatique &amp; Technique</fullName>
            </value>
            <value>
                <fullName>Pôle commercial</fullName>
            </value>
            <value>
                <fullName>Pôle Marketing &amp; Communicaiton</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>PLAC</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>