force-app/main/default/objects/Lead/fields/LPCR_TypeStructure__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeStructure__c</fullName>
    <label>Type de structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MUNICIPALE</fullName>
                <label>Crèche municipale</label>
            </value>
            <value>
                <fullName>ASSOCIATIVE</fullName>
                <label>Crèche associative</label>
            </value>
            <value>
                <fullName>MICRO</fullName>
                <label>Micro crèches</label>
            </value>
            <value>
                <fullName>FAMILIALES</fullName>
                <label>Crèches Familiales / Parentale</label>
            </value>
            <value>
                <fullName>HOSPITALIERE</fullName>
                <label>Hospitalière</label>
            </value>
            <value>
                <fullName>AUTRE</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>MUTUALISTE</fullName>
                <label>Mutualiste</label>
            </value>
            <value>
                <fullName>PRIVEE</fullName>
                <label>Privée</label>
            </value>
            <value>
                <fullName>AutreOld</fullName>
                <isActive>false</isActive>
                <label>AutreOld</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>