force-app/main/default/objects/Lead/fields/LPCR_Vendredi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Vendredi1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendredi enfant 1</label>
    <type>Checkbox</type>
</CustomField>