force-app/main/default/objects/Lead/fields/LPCR_Vendredi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Vendredi2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendredi enfant 2</label>
    <type>Checkbox</type>
</CustomField>