force-app/main/default/objects/Lead/fields/LPCR_Vendredi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Vendredi3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendredi enfant 3</label>
    <type>Checkbox</type>
</CustomField>