force-app/main/default/objects/Lead/fields/LPCR_VilleSociete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VilleSociete__c</fullName>
    <label>Ville société</label>
    <length>64</length>
    <type>Text</type>
</CustomField>