force-app/main/default/objects/Lead/fields/LPCR_VilleSocieteCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VilleSocieteCoDemandeur__c</fullName>
    <label>Ville société co-demandeur</label>
    <length>64</length>
    <type>Text</type>
</CustomField>