force-app/main/default/objects/Lead/fields/Sparklane_FR__inactive__c.field-meta.xml
<CustomField>
    <fullName>Sparklane_FR__inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactif Sparklane</label>
    <type>Checkbox</type>
</CustomField>