force-app/main/default/objects/Lead/fields/Sparklane_FR__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>Sparklane_FR__ProfileId__c</fullName>
    <label>Identifiant Profil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>