force-app/main/default/objects/Lead/fields/Sparklane_FR__ProfileName__c.field-meta.xml
<CustomField>
    <fullName>Sparklane_FR__ProfileName__c</fullName>
    <label>Nom Profil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>