force-app/main/default/objects/Lead/fields/TECH_IsCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsCreatedBy__c</fullName>
    <formula>IF(CreatedBy.Id = $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est créateur</label>
    <type>Checkbox</type>
</CustomField>