force-app/main/default/objects/Lead/fields/Tech_ProprietaireServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>Tech_ProprietaireServiceFamille__c</fullName>
    <description>vrai si le propriétaire appartient au service famille. utilisé dans le process builder PB_Lead</description>
    <formula>IF(
BEGINS(OwnerId,&apos;00G&apos;),  
Owner:Queue.DeveloperName =&apos;LPCR_ServiceFamille&apos;,
IF(NOT(ISBLANK(Owner:User.UserRoleId)),Owner:User.UserRole.DeveloperName =&apos;Service_Famille&apos;,false))</formula>
    <inlineHelpText>Vrai si le propriétaire appartient au service famille</inlineHelpText>
    <label>Tech_Propriétaire Service Famille</label>
    <type>Checkbox</type>
</CustomField>