force-app/main/default/objects/Lead/recordTypes/AO_Prive.recordType-meta.xml
<RecordType>
    <fullName>AO_Prive</fullName>
    <active>true</active>
    <businessProcess>AO Privé</businessProcess>
    <label>AO Privé</label>
</RecordType>