force-app/main/default/objects/Lead/recordTypes/AO_Public.recordType-meta.xml
<RecordType>
    <fullName>AO_Public</fullName>
    <active>true</active>
    <businessProcess>AO Public</businessProcess>
    <label>AO Public</label>
</RecordType>