force-app/main/default/objects/Lead/recordTypes/AO_PublicDSP.recordType-meta.xml
<RecordType>
    <fullName>AO_PublicDSP</fullName>
    <active>true</active>
    <businessProcess>AO Public</businessProcess>
    <label>AO Public DSP</label>
</RecordType>