force-app/main/default/objects/Lead/recordTypes/AO_PublicReservation.recordType-meta.xml
<RecordType>
    <fullName>AO_PublicReservation</fullName>
    <active>true</active>
    <businessProcess>AO Public</businessProcess>
    <label>AO Public Réservation</label>
</RecordType>