force-app/main/default/objects/Lead/recordTypes/Entreprise.recordType-meta.xml
<RecordType>
    <fullName>Entreprise</fullName>
    <active>true</active>
    <businessProcess>Entreprise</businessProcess>
    <label>Entreprise</label>
</RecordType>