force-app/main/default/objects/Lead/recordTypes/Famille.recordType-meta.xml
<RecordType>
    <fullName>Famille</fullName>
    <active>true</active>
    <businessProcess>Famille</businessProcess>
    <label>Famille</label>
    
</RecordType>