force-app/main/default/objects/Lead/recordTypes/Partenaire.recordType-meta.xml
<RecordType>
    <fullName>Partenaire</fullName>
    <active>true</active>
    <businessProcess>Partenaire</businessProcess>
    <label>Gestionnaire</label>
</RecordType>