force-app/main/default/objects/Lead/validationRules/VR_Lead_10semainesMinimumEnfant1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_10semainesMinimumEnfant1</fullName>
    <active>true</active>
    <description>Je ne peux pas renseigner une date d&apos;entrée en crèche inférieure à 10 semaines après la naissance de l&apos;enfant.</description>
    <errorConditionFormula>AND(
  ! $Permission.LPCR_ByPass_VR,
  RecordType.DeveloperName = &apos;Famille&apos;,
  (LPCR_DateEntreeCreche1__c -LPCR_DateNaissance1__c) / 7 &lt; 10
)</errorConditionFormula>
    <errorDisplayField>LPCR_DateEntreeCreche1__c</errorDisplayField>
    <errorMessage>La date d&apos;entrée en crèche doit être au moins 10 semaines après la naissance</errorMessage>
</ValidationRule>