force-app/main/default/objects/Lead/validationRules/VR_Lead_AO_MotifNonCandidature.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_AO_MotifNonCandidature</fullName>
    <active>true</active>
    <description>Renseignez un motif de non candidature pour passer le lead AO public réservation ou AO public DSP au statut Abandonné</description>
    <errorConditionFormula>AND(
NOT( $User.LPCR_BypassValidationRules__c ),
OR(RecordType.DeveloperName=&apos;AO_PublicDSP&apos;,RecordType.DeveloperName=&apos;AO_PublicReservation&apos;),
ISPICKVAL(Status, &quot;Abandonné&quot;),
ISBLANK(  LPCR_MotifNoncandidature__c ))</errorConditionFormula>
    <errorDisplayField>LPCR_MotifNoncandidature__c</errorDisplayField>
    <errorMessage>Veuillez renseigner un motif de non candidature pour passer le lead au statut abandonné.</errorMessage>
</ValidationRule>