force-app/main/default/objects/Lead/validationRules/VR_Lead_AutrePrestataire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_AutrePrestataire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Permission.LPCR_ByPass_VR ),
INCLUDES(LPCR_PrestataireActuel__c ,&quot;Autre&quot;),
ISBLANK( LPCR_AutrePrestataire__c )
)</errorConditionFormula>
    <errorDisplayField>LPCR_AutrePrestataire__c</errorDisplayField>
    <errorMessage>Veuillez renseigner le prestataire</errorMessage>
</ValidationRule>