force-app/main/default/objects/Lead/validationRules/VR_Lead_Block_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_Block_Conversion</fullName>
    <active>false</active>
    <description>For lead famille, block the conversion if not initialized from the quick action &apos;Convertir&apos;</description>
    <errorConditionFormula>AND(  ISPICKVAL(Status, &quot;Converti&quot;)
     ,
       LPCR_Tech_BloqueConversion__c = true
     ,
       RecordType.DeveloperName = &apos;Famille&apos;
)</errorConditionFormula>
    <errorMessage>Merci d&apos;utiliser le bouton &apos;Convertir&apos; pour passer à l&apos;étape suivante</errorMessage>
</ValidationRule>