force-app/main/default/objects/Lead/validationRules/VR_Lead_ContactMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_ContactMandatory</fullName>
    <active>true</active>
    <description>L’utilisateur doit renseigner obligatoirement au moins un numéro de téléphone fixe, de téléphone mobile ou un email.</description>
    <errorConditionFormula>AND(ISBLANK(Email),ISBLANK(Phone),ISBLANK(MobilePhone))</errorConditionFormula>
    <errorMessage>Au moins un numéro de téléphone fixe, de téléphone mobile ou un email doit être renseigné.</errorMessage>
</ValidationRule>