force-app/main/default/objects/Lead/validationRules/VR_Lead_ModifInterditeLeadConverti.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_ModifInterditeLeadConverti</fullName>
    <active>true</active>
    <description>L&apos;utilisateur peut visualiser mais ne peut pas modifier les leads convertis</description>
    <errorConditionFormula>AND(
NOT( $Permission.LPCR_ByPass_VR ),
NOT( CONTAINS($Profile.Name,&apos;Admin&apos;)),
IsConverted,
NOT(ISCHANGED(IsConverted)))</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas modifier un lead déjà converti.</errorMessage>
</ValidationRule>