force-app/main/default/objects/Lead/validationRules/VR_Lead_MotifAbandon.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_MotifAbandon</fullName>
    <active>true</active>
    <description>Renseignez un motif de disqualification pour passer le lead au statut abandonné (pour les leads Famille, Partenaire, Entreprise)</description>
    <errorConditionFormula>AND(
NOT( $Permission.LPCR_ByPass_VR ),
OR(RecordType.DeveloperName=&apos;Famille&apos;,RecordType.DeveloperName=&apos;Entreprise&apos;,RecordType.DeveloperName=&apos;Partenaire&apos;),
ISPICKVAL(Status, &quot;Abandonné&quot;),
ISBLANK( LPCR_MotifDisqualification__c))</errorConditionFormula>
    <errorDisplayField>LPCR_MotifDisqualification__c</errorDisplayField>
    <errorMessage>Veuillez renseigner un motif de disqualification pour passer le lead au statut abandonné.</errorMessage>
</ValidationRule>