force-app/main/default/objects/Lead/validationRules/VR_Lead_SIRET_Obligatoire_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Lead_SIRET_Obligatoire_Conversion</fullName>
    <active>true</active>
    <description>Lors de la conversion d&apos;un lead en ( compte/ contact / opportunité ), je dois obligatoirement renseigner le numéro SIRET  de l&apos;entreprise. Le cas  non échéant un message d&apos;erreur s&apos;affiche avec l&apos;obligation de cocher la case « Pas de numéro de SIRET ».</description>
    <errorConditionFormula>AND(
NOT($Permission.LPCR_ByPass_VR),
ISCHANGED(IsConverted),
IsConverted,
OR(
RecordType.DeveloperName = &apos;Entreprise&apos;,
RecordType.DeveloperName = &apos;AO_PublicDSP&apos;,
RecordType.DeveloperName = &apos;AO_PublicReservation&apos;),
ISBLANK(LPCR_SIRET__c),
NOT( LPCR_PasDeSIRET__c ))</errorConditionFormula>
    <errorDisplayField>LPCR_SIRET__c</errorDisplayField>
    <errorMessage>Pour la conversion du lead entreprise ou AO,  le champ SIRET doit être rempli ou &quot;Pas de SIRET&quot; coché.</errorMessage>
</ValidationRule>