force-app/main/default/objects/Lead/listViews/LCPR_MesLeadsEntrepriseEnCours.listView-meta.xml
<ListView>
    <fullName>LCPR_MesLeadsEntrepriseEnCours</fullName>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LPCR_LeadFamille__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Entreprise</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>En cours</value>
    </filters>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mes Leads entreprise en cours</label>
</ListView>