force-app/main/default/objects/Lead/listViews/LPCR_75015MICRO_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_75015MICRO_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>75015 - MICRO</label>
    <queue>LPCR_75015MICRO</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>