force-app/main/default/objects/Lead/listViews/LPCR_77MicroAutres_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_77MicroAutres_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>77 - Micro + Autres</label>
    <queue>LPCR_77MicroAutres</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>