force-app/main/default/objects/Lead/listViews/LPCR_AnouckGuihot_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_AnouckGuihot_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Anouck Guihot</label>
    <queue>LPCR_AnouckGuihot</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>