force-app/main/default/objects/Lead/listViews/LPCR_AubinSalon_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_AubinSalon_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Aubin Salon</label>
    <queue>LPCR_AubinSalon</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>