force-app/main/default/objects/Lead/listViews/LPCR_ClementineCourrier_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_ClementineCourrier_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Clémentine Courrier</label>
    <queue>LPCR_ClementineCourrier</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>