force-app/main/default/objects/Lead/listViews/LPCR_ElodieRault_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_ElodieRault_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Elodie Rault</label>
    <queue>LPCR_ElodieRault</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>