force-app/main/default/objects/Lead/listViews/LPCR_FatimalLaid_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_FatimalLaid_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Fatima Laid</label>
    <queue>LPCR_FatimalLaid</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>