force-app/main/default/objects/Lead/listViews/LPCR_JimmyBuffo_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_JimmyBuffo_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Jimmy Buffo</label>
    <queue>LPCR_JimmyBuffo</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>