force-app/main/default/objects/Lead/listViews/LPCR_LeadsAOPublic.listView-meta.xml
<ListView>
    <fullName>LPCR_LeadsAOPublic</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.AO_Public</value>
    </filters>
    <label>Leads AO Public</label>
</ListView>