force-app/main/default/objects/Lead/listViews/LPCR_LeadsEntreprise.listView-meta.xml
<ListView>
    <fullName>LPCR_LeadsEntreprise</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Entreprise</value>
    </filters>
    <label>Leads Entreprise</label>
</ListView>