force-app/main/default/objects/Lead/listViews/LPCR_LeadsFamille.listView-meta.xml
<ListView>
    <fullName>LPCR_LeadsFamille</fullName>
    <columns>LEAD.STATE</columns>
    <columns>LPCR_NomCreche1__c</columns>
    <columns>LPCR_NomCreche2__c</columns>
    <columns>LPCR_NomCreche3__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LPCR_NomCoDemandeur__c</columns>
    <columns>LPCR_DateNaissance1__c</columns>
    <columns>LPCR_DateNaissance2__c</columns>
    <columns>LPCR_DateNaissance3__c</columns>
    <columns>LPCR_DateEntreeCreche1__c</columns>
    <columns>LPCR_DateEntreeCreche2__c</columns>
    <columns>LPCR_DateEntreeCreche3__c</columns>
    <columns>LPCR_DelaiPriseChargeServiceFamille__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Famille</value>
    </filters>
    <label>Leads Famille</label>
</ListView>