force-app/main/default/objects/Lead/listViews/LPCR_LeadsNonAssignes_Lead.listView-meta.xml
<ListView>
    <fullName>LPCR_LeadsNonAssignes_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Leads non assignés</label>
    <queue>LPCR_LeadsNonAssignes</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>